Fri Jul 19 11:23:55 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:16:54 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#to_set): Define Set#to_set so that aSet.to_set
	  returns self. [Fixes GH-359]

Fri Jul 19 11:10:23 2013  Zachary Scott  <e@zzak.io>

	* lib/rake/*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 01:04:14 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/bignum/intpack.c: Renamed from ext/-test-/bignum/pack.c.
	  (Init_intpack): Renamed from Init_pack.
	  Reported by Naohisa Goto.  [ruby-dev:47526] [Bug #8655]

Fri Jul 19 00:54:27 2013  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_array.rb (test_count): add a test case for #count
	  with an argument. See Bug #8654.

Thu Jul 18 23:45:06 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_eql): compare RARRAY_PTR() for performance
	  improvement in case of that self and other are shared.

Thu Jul 18 22:46:42 2013  Zachary Scott  <e@zzak.io>

	* lib/cgi.rb: [DOC] Capitalize "Ruby" in documentation [Fixes GH-341]
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341
	* lib/webrick.rb: ditto
	* lib/scanf.rb: ditto
	* lib/xmlrpc/config.rb: ditto
	* lib/resolv.rb: ditto
	* lib/e2mmap.rb: ditto
	* lib/fileutils.rb: ditto
	* lib/mkmf.rb: ditto
	* lib/cgi/session.rb: ditto
	* lib/yaml.rb: ditto
	* lib/erb.rb: ditto
	* lib/irb.rb: ditto
	* lib/tracer.rb: ditto
	* lib/net/http.rb: ditto
	* ext/syslog/lib/syslog/logger.rb: ditto
	* sample/pty/expect_sample.rb: ditto

Thu Jul 18 21:30:50 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_sq_fast): Specialize the last iteration of the
	  outer loop.
	  (bigfixize): A condition simplified.

Thu Jul 18 21:15:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_equal): compare RARRAY_PTR() for performance