@@ -98,7 +98,7 @@ class RDoc::TopLevel < RDoc::Context
 
   ##
   # Adds class or module +mod+. Used in the building phase
-  # by the ruby parser.
+  # by the Ruby parser.
 
   def add_to_classes_or_modules mod
     @classes_or_modules << mod
